--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,20 +9,19 @@ jobs:
   run:
     name: Run script
     runs-on: ubuntu-18.04
-    container:    
-      image: python:buster
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Run Python script
-      run: python test.py
+    - name: copy file via ssh key
+      uses: appleboy/scp-action@master
+      env:
+        HOST: 45.77.248.233
+        USERNAME: root
+        PORT: 22
+        KEY: ${{ secrets.SSH_PVT }}
+      with:
+        source: "test.py"
+        target: "/test.py"
 
-  test:
-    name: Done
-    runs-on: ubuntu-18.04
-    
-    steps:
-    - name: Run done
-      run: echo "Done!"
