--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -25,5 +25,15 @@ jobs:
         source: "test.py"
         target: "/test"
 
-    - name: Run python script
-      run: python3 /test/test.py
+    - name: Rocket.Chat Notification
+      uses: RocketChat/Rocket.Chat.GitHub.Action.Notification@master
+      if: always()
+      with:
+        type: ${{ job.status }}
+        job_name: '*Test Deploy*'
+        mention: 'here'
+        channel: '#nixfaq'
+        url: ${{ secrets.ROCKETCHAT_WEBHOOK }}
+        commit: true
+        token: ${{ secrets.GITHUB_TOKEN }}
+
